--- a/java-basic/build.gradle
+++ b/java-basic/build.gradle
@@ -37,8 +37,11 @@ repositories {
 }
 
 dependencies {
+    // MySQL DBMS JDBC Driver
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.44'
     compile 'com.google.guava:guava:22.0'
     testCompile 'junit:junit:4.12'
+    
 }
 
 mainClassName = 'App'
