--- a/java-prepare-project/src/main/java/application-context.properties
+++ b/java-prepare-project/src/main/java/application-context.properties
@@ -7,3 +7,4 @@ scoreDao=java100.app.dao.mysql.ScoreDaoImpl
 /board=java100.app.control.BoardController
 /room=java100.app.control.RoomController
 /score=java100.app.control.ScoreController
+/hello=java100.app.control.HelloController
