--- a/java-project/build.gradle
+++ b/java-project/build.gradle
@@ -37,6 +37,8 @@ repositories {
 }
 
 dependencies {
+//reflections 작업을 도와주는 라이브러리
+    compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
 // MySQL DBMS JDBC Driver
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.44'
     compile 'com.google.guava:guava:22.0'
