--- a/java-prepare/build.gradle
+++ b/java-prepare/build.gradle
@@ -39,6 +39,10 @@ repositories {
 dependencies {
     // MySQL DBMS의 JDBC Driver
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.44'
+    
+    // Spring Context Libraries
+    compile 'org.springframework:spring-context:5.0.2.RELEASE'
+    
     compile 'com.google.guava:guava:22.0'
     testCompile 'junit:junit:4.12'
 }
