--- a/java-basic/build.gradle
+++ b/java-basic/build.gradle
@@ -37,11 +37,14 @@ repositories {
 }
 
 dependencies {
-    // MySQL DBMS JDBC Driver
+// MySQL DBMS JDBC Driver
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.44'
+
+// Spring Context Libraries
+    compile 'org.springframework:spring-context:5.0.2.RELEASE'
+
     compile 'com.google.guava:guava:22.0'
     testCompile 'junit:junit:4.12'
-    
 }
 
 mainClassName = 'App'
