--- a/java-project/build.gradle
+++ b/java-project/build.gradle
@@ -37,10 +37,16 @@ repositories {
 }
 
 dependencies {
-//reflections 작업을 도와주는 라이브러리
-    compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
+
 // MySQL DBMS JDBC Driver
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.44'
+
+// Spring Context Libraries
+    compile 'org.springframework:spring-context:5.0.2.RELEASE'
+
+//reflections 작업을 도와주는 라이브러리
+    compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
+    
     compile 'com.google.guava:guava:22.0'
     testCompile 'junit:junit:4.12'
 }
