--- a/java-project/build.gradle
+++ b/java-project/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'application'
 
 apply plugin: 'eclipse'
 
+apply plugin: 'war'
+
 eclipse {
   jdt {
     sourceCompatibility = 1.8
@@ -37,6 +39,9 @@ repositories {
 }
 
 dependencies {
+
+// https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
+    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 
 // MySQL DBMS JDBC Driver
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.44'
