--- a/spring-prepare-webmvc/src01/main/webapp/WEB-INF/web.xml
+++ b/spring-prepare-webmvc/src01/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
   version="3.1"
   metadata-complete="false">
-  
+    <!-- 요청 파라미터의 문자 집합을 지정하는 필터 등록 -->
     <filter>
         <filter-name>CharacterEncodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -14,32 +14,32 @@
             <param-value>UTF-8</param-value>
         </init-param>
     </filter>
-    
     <filter-mapping>
         <filter-name>CharacterEncodingFilter</filter-name>
         <url-pattern>*</url-pattern>
     </filter-mapping>
-    
+  
+    <!-- Spring WebMVC 프론트 컨트롤러 역할을 수행하는 서블릿 등록 -->
     <servlet>
-        <servlet-name>dispatch</servlet-name>
+        <servlet-name>app</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        
-        <init-param>
-          <param-name>contextClass</param-name>
-          <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
-        </init-param>
-        
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>java100.app.AppConfig</param-value>
+            <param-value>/WEB-INF/app-servlet.xml</param-value>
         </init-param>
-        
         <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>dispatch</servlet-name>
-        <url-pattern>*.do</url-pattern>
+        <servlet-name>app</servlet-name>
+        <url-pattern>/app/*</url-pattern>
     </servlet-mapping>
-    
+  
+    <!-- 클라이언트에서 특정 경로의 기본 문서를 요구했을 때 
+         그 문서를 찾는 순서이다. -->
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.htm</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
